Avance final, anexo de archivo JS

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main>
         <div class="cabecera-ejercicios">
             <h4>Ejercicio 1:</h4>
-            <button>Realizar</button>
+            <button onclick="metodoMap(arrayEjercicio1)">Realizar</button>
         </div>
         <p>
             Dado el siguiente arreglo de números, utiliza el método map() para crear un
@@ -32,7 +32,7 @@
 
         <div class="cabecera-ejercicios">
             <h4>Ejercicio 2:</h4>
-            <button>Realizar</button>
+            <button onclick="metodoFilter(arrayEjercicio2)">Realizar</button>
         </div>
         <p>
             Dado el siguiente arreglo de nombres, usa el método filter() para generar un nuevo
@@ -43,8 +43,8 @@
         </a>
 
         <div class="cabecera-ejercicios">
-            <h4>Ejercicio 3:</h4>
-            <button>Realizar</button>
+            <h4>Ejercicio 3:</h4> 
+            <button onclick="metodoReduce(arrayEjercicio3)">Realizar</button>
         </div>
         <p>
             Dado el siguiente arreglo de números, utiliza el método reduce() para obtener la suma
@@ -56,7 +56,7 @@
 
         <div class="cabecera-ejercicios">
             <h4>Ejercicio 4:</h4>
-            <button>Realizar</button>
+            <button onclick="metodoEvery(arrayEjercicio4)">Realizar</button>
         </div>
         <p>
             Dado el siguiente arreglo de palabras, utiliza el método every() para verificar si todas
@@ -68,7 +68,7 @@
 
         <div class="cabecera-ejercicios">
             <h4>Ejercicio 5:</h4>
-            <button>Realizar</button>
+            <button onclick="metodoSort(arrayEjercicio5)">Realizar</button>
         </div>
         <p>
             Dado el siguiente arreglo de números, utiliza el método sort() para ordenarlos de forma
@@ -80,7 +80,7 @@
 
         <div class="cabecera-ejercicios">
             <h4>Ejercicio 6:</h4>
-            <button>Realizar</button>
+            <button onclick="mostrarObjeto(objetoEjercicio6)">Realizar</button>
         </div>
         <p>
             Dado el siguiente objeto:
@@ -95,7 +95,7 @@
 
         <div class="cabecera-ejercicios">
             <h4>Ejercicio 7:</h4>
-            <button>Realizar</button>
+            <button onclick="sumaCicloFor(arrayEjercicio7)">Realizar</button>
         </div>
         <p>
             Dado el siguiente arreglo:
@@ -114,7 +114,7 @@
                     <b>
                         Para esta asignación selecciona 5 de los 7 ejercicios para
                         realizarlos y se deben cargar los archivos o archivo del
-                        desarrollo de estos ejercicios a la plataforma en un archivo .rar. 
+                        desarrollo de estos ejercicios a la plataforma en un archivo .rar.
                     </b>
                 </li>
             </ul>
@@ -124,6 +124,6 @@
         </p>
         <h2>EXITOS!</h2>
     </main>
+    <script src="./script/script.js"></script>
 </body>
-<script src="./script.js"></script>
 </html>
